[tool.poetry]
name = "toolkit"
version = "0.1.0"
description = ""
authors = ["octavedbc <octave.dbc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"
matplotlib = "^3.8.0"
altair = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
